--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,11 @@ permissions:
   contents: write
   packages: write
 
+env:
+  CHART_NAME: cardano-validator-watcher
+  CHART_DIRECTORY: charts
+  REGISTRY: oci://ghcr.io/kilnfi/charts
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -38,3 +43,35 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  helm-release:
+    runs-on: ubuntu-latest
+    needs: goreleaser
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up Helm
+        uses: azure/setup-helm@v4.2.0
+        with:
+          version: v3.16.4
+      - name: Verify Chart Version
+        run: |
+          TAG=$(echo ${{ github.ref_name }} | sed 's/v//')
+          CHART_VERSION=$(yq -r .version ${{ env.CHART_DIRECTORY }}/${{ env.CHART_NAME }}/Chart.yaml)
+          if [ "$TAG" != "${CHART_VERSION}" ]; then
+            echo "Version mismatch: release tag ${TAG} does not match Chart.yaml version ${CHART_VERSION}"
+            exit 1
+          fi
+          echo "CHART_VERSION=$CHART_VERSION" >> $GITHUB_ENV
+      - name: Helm Registry Login
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io --username ${{ env.USERNAME }} --password-stdin
+        env:
+          USERNAME: kilnfi
+      - name: 'Helm Package'
+        id: helm-package
+        run: |
+          helm package ${{ env.CHART_DIRECTORY }}/${{ env.CHART_NAME }} --version $CHART_VERSION
+      - name: 'Helm Push'
+        run: |
+          helm push ./cardano-validator-watcher-$CHART_VERSION.tgz ${{ env.REGISTRY }}
