--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -1,6 +1,15 @@
 with-expecter: true
 dir: "{{.InterfaceDir}}/mocks/"
 packages:
+  github.com/kilnfi/cardano-validator-watcher/internal/cardano:
+    interfaces:
+      CardanoClient:
+  github.com/kilnfi/cardano-validator-watcher/internal/cardano/cardanocli:
+    interfaces:
+      CommandExecutor:
   github.com/kilnfi/cardano-validator-watcher/internal/blockfrost:
     interfaces:
       Client:
+  github.com/kilnfi/cardano-validator-watcher/internal/slotleader:
+    interfaces:
+      SlotLeader:
