--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
+
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# configuration resources that should be keepd locally
 config.yaml
-.codegpt
-bin/
 config/
+exp/
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool
+*.out
+
+# Release
+dist/
+
+# Dependency directories (remove the comment below to include it)
+bin/
+output/
+testbin/
+
+# Others
+**/.DS_Store
 *.db*
