--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,7 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  golangci:
+  codebase:
     name: lint
     runs-on: ubuntu-latest
     steps:
@@ -24,7 +24,8 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
-  helm-lint:
+  helm-chart:
+    if: false
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
