--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ env:
   REGISTRY: oci://ghcr.io/kilnfi/charts
 
 jobs:
-  goreleaser:
+  binaries:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -23,14 +23,6 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -44,9 +36,40 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  helm-release:
+  images:
     runs-on: ubuntu-latest
-    needs: goreleaser
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v6
+        name: Build & Push Container Images
+        with:
+          context: .
+          file: Dockerfile
+          labels: |-
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+            org.opencontainers.image.name=cardano-validator-watcher"
+            org.opencontainers.image.version=${{ github.ref_name }}"
+            org.opencontainers.image.authors=contact@kiln.fi"
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |-
+            ghcr.io/${{ github.repository_owner }}/cardano-validator-watcher:${{ github.ref_name }}
+            ghcr.io/${{ github.repository_owner }}/cardano-validator-watcher:latest
+
+  helm-chart:
+    if: false
+    needs: images
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
