--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,8 @@ env:
 jobs:
   binaries:
     runs-on: ubuntu-latest
+    container:
+      image: docker.io/goreleaser/goreleaser-cross:v1.23
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
