--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,60 +1,76 @@
+version: "2"
+run:
+  go: "1.24"
 linters:
-  disable-all: true
+  default: none
   enable:
     - asasalint
     - asciicheck
     - bidichk
     - bodyclose
-    - dogsled
-    - durationcheck
-    - dupword
-    - errcheck
+    - contextcheck
     - copyloopvar
+    - dogsled
+    - dupword
+    - durationcheck
+    - errcheck
     - errchkjson
+    - ginkgolinter
     - goconst
-    - gofmt
-    - sloglint
+    - gocritic
     - goheader
-    - goimports
     - goprintffuncname
     - gosec
-    - gosimple
-    - gocritic
     - govet
-    - ginkgolinter
     - importas
     - ineffassign
     - misspell
     - nakedret
-    - nosprintfhostport
     - nilerr
     - noctx
     - nolintlint
+    - nosprintfhostport
+    - prealloc
+    - promlinter
     - revive
+    - sloglint
+    - sqlclosecheck
     - staticcheck
-    - stylecheck
     - testifylint
-    - tparallel
     - thelper
-    - typecheck
+    - tparallel
     - unconvert
     - unparam
     - unused
     - usestdlibvars
     - whitespace
     - wrapcheck
-    - sqlclosecheck
-    - promlinter
-    - prealloc
-    - contextcheck
-
-linters-settings:
-  gocritic:
-    disabled-checks: [captLocal]
-  revive:
-    rules:
-      - name: blank-imports
-        disabled: true
-issues: {}
-run:
-  timeout: 5m
+  settings:
+    gocritic:
+      disabled-checks:
+        - captLocal
+    revive:
+      rules:
+        - name: blank-imports
+          disabled: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
